--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <img src="img/asian.png" alt="">
             </div>
             <div class="about-text">
-                <p>Наша команда специализируется на полном цикле разработки, включая backend и front-end. Мы эксперты в
-                    использовании React и Django, а также имеем широкий опыт работы с другими технологиями. Мы создаем
-                    привлекательные и интуитивно понятные пользовательские интерфейсы, а также надежные и масштабируемые
-                    серверные приложения. Мы всегда готовы к новым вызовам в области разработки и стремимся к
-                    совершенству.</p>
+                <p>Our team specializes in the full development cycle, including backend and frontend. We are experts in
+                    using React and Django, and also have extensive experience with other technologies. We create
+                    attractive and intuitive user interfaces, as well as reliable and scalable
+                    server applications. We are always ready for new challenges in the field of development and strive to
+                    perfection.</p>
                 <div class="information">
                     <div class="info-box">
                         <i class='bx bxs-user'></i>
@@ -80,7 +80,7 @@
                         <span>WorkBench@gmail.com</span>
                     </div>
                 </div>
-                <a href="#" class="btn">Download Cv</a>
+                <a href="#" class="btn">Hire Us</a>
             </div>
         </div>
     </section>
