--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> WorkBench </title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="img/team-logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -92,7 +93,7 @@
                             <path d="M10.314 -3.686H12.314V26.314H10.314z" transform="rotate(45 11.314 11.314)"></path>
                         </g>
                     </svg>
-                </label><span class="t898__hint t-name t-name_xs">связаться с нами</span>
+                </label><span class="t898__hint t-name t-name_xs">contact us</span>
                 <div class="t898__animated-circle" style="border-color:#afed13;"></div><!-- old soclinks --><a
                     class="t898__icon t898__icon-whatsapp_wrapper t898__icon_link" href="https://wa.me/87077772817"
                     target="_blank" rel="nofollow noopener noreferrer"><span
@@ -130,9 +131,10 @@
         <div class="t898__wrapper" style="bottom:45px;right:20px;left:inherit;"><input type="checkbox"
                 class="t898__btn_input" id="t898__btn_input_439714958"><label for="t898__btn_input_439714958"
                 class="t898__btn_label" style="background:#afed13;border: 2px solid #5730a6;">
-                <div class="t898__bgimg t-bgimg loaded" bgimgfield="img"
-                    data-original="https://static.tildacdn.com/tild3536-6662-4334-b534-356536663061/261-emoji-smile-outl.gif"
-                    style="background-image: url(&quot;https://static.tildacdn.com/tild3536-6662-4334-b534-356536663061/261-emoji-smile-outl.gif&quot;);">
+                <div class="t898__bgimg t-bgimg loaded">
+                    <svg width="40" height="26" viewBox="0 0 73 58" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M41.4176 12.6533L41.3974 12.6533L41.3726 12.6558C21.2172 14.6713 11.5849 23.5126 6.83894 32.8645C4.47549 37.5217 3.33615 42.2807 2.69256 46.3327C2.37075 48.3587 2.17233 50.2122 2.00802 51.7859C2.00034 51.8595 1.99274 51.9324 1.9852 52.0046C1.83103 53.4831 1.7063 54.6792 1.53408 55.5449C1.36831 56.2366 1.81466 56.7835 2.2737 57.013C2.51334 57.1328 2.80382 57.196 3.0949 57.1439C3.40026 57.0891 3.67998 56.9101 3.85643 56.6013L3.86034 56.5945L3.86404 56.5875C7.35606 50.0026 11.0605 44.2919 16.709 40.3379C22.3455 36.3924 29.9781 34.1562 41.4006 34.6528L41.4114 34.6533H41.4176C41.4175 34.6537 41.4462 34.658 41.5045 34.6904C41.5702 34.7269 41.6463 34.7843 41.7188 34.8568C41.7913 34.9293 41.8487 35.0053 41.8852 35.0711C41.9176 35.1294 41.9219 35.1581 41.9223 35.158V45.1533C41.9223 45.4346 42.0183 45.7287 42.1532 45.9811C42.2907 46.2385 42.4906 46.494 42.7431 46.6876C42.9967 46.882 43.3259 47.0297 43.7046 47.0171C44.0843 47.0044 44.4436 46.833 44.7602 46.5223L71.4354 23.9433C72.0869 23.4416 72.0846 22.4561 71.4284 21.9579L44.7347 0.762847C44.7345 0.76269 44.7343 0.762534 44.7341 0.762377C44.4895 0.567004 44.1766 0.504216 43.9063 0.500211C43.6251 0.496046 43.3253 0.553576 43.0491 0.664043C42.5168 0.876978 41.9223 1.36284 41.9223 2.15328V12.1485C41.9219 12.1485 41.9176 12.1772 41.8852 12.2355C41.8487 12.3012 41.7913 12.3772 41.7188 12.4497C41.6463 12.5222 41.5702 12.5797 41.5045 12.6162C41.4462 12.6486 41.4175 12.6528 41.4176 12.6533Z" fill="white" stroke="#333333"/>
+                        </svg>                                                
                 </div><svg role="presentation" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                     class="t898__icon t898__icon-close" viewBox="0 0 23 23">
                     <g fillrule="evenodd">
@@ -140,7 +142,7 @@
                         <path d="M10.314 -3.686H12.314V26.314H10.314z" transform="rotate(45 11.314 11.314)"></path>
                     </g>
                 </svg>
-            </label><span class="t898__hint t-name t-name_xs">связаться с нами</span>
+            </label>
             <div class="t898__animated-circle" style="border-color:#afed13;"></div><!-- old soclinks --><a
                 class="t898__icon t898__icon-whatsapp_wrapper t898__icon_link" href="https://wa.me/77077307480"
                 target="_blank" rel="nofollow noopener noreferrer"><span
@@ -179,6 +181,11 @@
     </section>
     
     <!-- Home Section End -->
+
+    <div class="scroll-to-top">
+        <a href="#top"><i class="fa fa-arrow-up"></i></a>
+    </div>
+
     <!-- About Section Start -->
 
     <section class="about" id="about">
@@ -354,6 +361,10 @@
         </div>
     </section>
     <!-- Skills Section End -->
+
+    <section class="our-partners">
+        
+    </section>
     <!-- Services Section Start -->
     <section class="services" id="services">
         <div class="heading">
@@ -378,6 +389,19 @@
             <div class="services-box">
                 <i class='bx bxl-android'></i>
                 <h3>App Development</h3>
+            </div>
+        </div>
+
+        <div class="services-content">
+
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-server'></i>
+                <h3>Backend Development</h3>
             </div>
         </div>
     </section>
@@ -522,9 +546,6 @@
 
     <!-- Contact Section Start -->
     <section class="contact" id="contact">
-        <div class="scroll-to-top">
-            <a href="#top"><i class="fa fa-arrow-up"></i></a>
-        </div>
         <div class="heading">
             <h2>Contact Us</h2>
         </div>
@@ -533,7 +554,7 @@
                 <input type="text" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
-                <input type="button" value="Send" class="contact-button">
+                <button type="submit" class="contact-button">Send</button>
             </form>
         </div>
     </section>
